# copilot-hack

.devcontainer/: devcontainer.json
.github/: BACKLOG_ISSUE_LOG_MESSAGE_FORMATTING.md  copilot-instructions.md  python.md
.github/workflows/: ci.yml
whack-a-mole/: .gitignore  README.md  SECURITY.md  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini
whack-a-mole/backend/: app.py
whack-a-mole/frontend/static/css/: style.css
whack-a-mole/frontend/static/js/: game.js  gameWorker.js
whack-a-mole/frontend/templates/: index.html
whack-a-mole/tests/: README.md
whack-a-mole/tests/backend/: conftest.py
whack-a-mole/tests/backend/integration/: test_threads.py
whack-a-mole/tests/backend/unit/: test_difficulty.py  test_game_state.py  test_handlers.py
whack-a-mole/tests/frontend/: setup.js
whack-a-mole/tests/frontend/unit/: game.test.js  gameWorker.test.js
