[project]
name = "whack-a-mole"
version = "1.0.0"
description = "A multi-threaded Whack-a-Mole web game with Flask backend and Web Worker frontend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.10.0",
    "python-engineio>=4.8.0",
    "eventlet>=0.35.0",
    "gevent>=24.2.0",
    "gevent-websocket>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), and Pylint (PL)
select = ["F", "E", "W", "PL"]

[tool.ruff.lint.pylint]
max-statements = 40
max-args = 10
max-locals = 15
max-branches = 12

