[project]
name = "whack-a-mole"
version = "1.0.0"
description = "A multi-threaded Whack-a-Mole web game with Flask backend and Web Worker frontend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "python-socketio>=5.10.0",
    "python-engineio>=4.8.0",
    "eventlet>=0.35.0",
    "gevent>=24.2.0",
    "gevent-websocket>=0.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "flask-testing>=0.8.1",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), and Pylint (PL)
select = ["F", "E", "W", "PL"]

[tool.ruff.lint.pylint]
max-statements = 25
max-args = 10
max-locals = 15
max-branches = 12

[tool.ruff.lint.per-file-ignores]
# Allow magic values in tests (expected values are self-documenting)
# Allow E402 in conftest.py (sys.path modification must happen before imports)
"tests/**" = ["PLR2004", "E402"]

